Google Drive Backup, Restore & Scheduled Auto Backups (Closes #2)
This is a major feature release that introduces a complete and robust data backup and restore solution powered by Google Drive. This gives you peace of mind and makes it easier than ever to manage your data across devices.

### What's New
* **Google Drive Backup & Restore**
    You can now securely back up your entire app data to a private folder in your Google Drive. Simply navigate to **Menu > Settings > Backup to Google Drive** and sign in with your Google account. From there, you can create new encrypted backups or restore from a list of your previous saves.

* **Scheduled Auto-Backups**
    Set it and forget it! The new **Scheduled Backups** screen allows you to configure automatic backups. Choose a frequency (**Daily, Weekly, or Monthly**) and a specific time of day to ensure your data is always protected without any manual effort.

* **Restore on First Launch**
    Setting up a new phone or reinstalling the app is now a breeze. On the welcome screen, you'll see a new option to sign in with Google and **restore from a cloud backup**, completely skipping the manual setup wizard and getting you back to your data instantly.

* **Automatic Profile Naming**
    For a smoother onboarding experience, the app will now conveniently use the name from your connected Google account as your default profile name, saving you a step during setup.

Closes #2

--- a/shared/ui/core/src/main/res/values/strings.xml
+++ b/shared/ui/core/src/main/res/values/strings.xml
@@ -239,6 +239,7 @@
     <string name="export">Export</string>
     <string name="no_transactions_for_query">There are no transactions for the "%1$s" query.</string>
     <string name="import_export"><![CDATA[Import & Export]]></string>
+<string name="backup_to_google_drive">Backup to Google Drive</string>
     <string name="backup_data">Backup data</string>
     <string name="import_data">Import data</string>
     <string name="app_settings">App Settings</string>
